--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-time Data Visualization</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -41,16 +41,16 @@
         <h2>Image Gallery</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="/Screenshot 2025-02-17 133418.png" alt="Gallery Image 1">
+                <img src="Screenshot 2025-02-17 133418.png" alt="Gallery Image 1">
             </div>
             <div class="gallery-item">
-                <img src="/image.png" alt="Gallery Image 4">
+                <img src="image.png" alt="Gallery Image 4">
             </div>
             <div class="gallery-item">
                 <img src="Screenshot 2025-02-17 134413.png" alt="Gallery Image 4">
             </div>
             <div class="gallery-item">
-                <img src="/Screenshot 2025-02-17 134525.png" alt="Gallery Image 4">
+                <img src="Screenshot 2025-02-17 134525.png" alt="Gallery Image 4">
             </div>
         </div>
     
@@ -60,6 +60,6 @@
             <img src="" alt="Lightbox Image" class="lightbox-img">
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
